--- a/content/events/erasmus-bilgi-gunleri-2024.mdx
+++ b/content/events/erasmus-bilgi-gunleri-2024.mdx
@@ -77,5 +77,5 @@ Etkinliğe tam katılım gösterenlere katılım sertifikası verilecektir.
 
 ## İletişim
 
-Sorularınız için: erasmus@koz-der.org
+Sorularınız için: info@kozder.com
 
