--- a/content/templates/event-template.mdx
+++ b/content/templates/event-template.mdx
@@ -39,5 +39,5 @@ Etkinlik hakkında detaylı bilgiler ve katılım koşulları.
 
 ## İletişim
 
-Sorularınız için: info@koz-der.org
+Sorularınız için: info@kozder.com
 
