--- a/src/content/events/zeka-oyunlari-kampi-2024.mdx
+++ b/src/content/events/zeka-oyunlari-kampi-2024.mdx
@@ -80,5 +80,5 @@ Kayıt için yukarıdaki linki kullanabilirsiniz. Kontenjan 50 kişi ile sınır
 
 ## İletişim
 
-Kamp hakkında detaylı bilgi için: kamp@koz-der.org
+Kamp hakkında detaylı bilgi için: info@kozder.com
 
