--- a/content/events/genclik-forumu-2024.mdx
+++ b/content/events/genclik-forumu-2024.mdx
@@ -88,7 +88,7 @@ Etkinlik ücretsizdir ve herkese açıktır. Kayıt zorunludur.
 
 ## İletişim
 
-Forum hakkında detaylı bilgi için: forum@koz-der.org
+Forum hakkında detaylı bilgi için: info@kozder.com
 
 ## Sosyal Medya
 
