--- a/src/content/events/genclik-festivali-2024.mdx
+++ b/src/content/events/genclik-festivali-2024.mdx
@@ -57,7 +57,7 @@ Festivalimiz, yerel yönetimler, özel sektör ve sivil toplum kuruluşları tar
 
 ## İletişim
 
-Festival hakkında detaylı bilgi için: festival@koz-der.org
+Festival hakkında detaylı bilgi için: info@kozder.com
 
 ## Sosyal Medya
 
