--- a/src/content/events/kodlama-maratonu-2024.mdx
+++ b/src/content/events/kodlama-maratonu-2024.mdx
@@ -67,5 +67,5 @@ Etkinlik ücretsizdir ancak kayıt zorunludur. Kayıt için yukarıdaki linki ku
 
 ## İletişim
 
-Sorularınız için: info@koz-der.org
+Sorularınız için: info@kozder.com
 
