--- a/src/content/posts/yeni-proje-basvurulari.mdx
+++ b/src/content/posts/yeni-proje-basvurulari.mdx
@@ -33,5 +33,5 @@ Başvurular için lütfen [iletişim](/iletisim) sayfamızdan bizimle iletişime
 
 ## Sorularınız mı var?
 
-Başvuru süreci hakkında sorularınız için info@koz-der.org adresine e-posta gönderebilirsiniz.
+Başvuru süreci hakkında sorularınız için info@kozder.com adresine e-posta gönderebilirsiniz.
 
